# studies

./: README.md
afitsd/: l05.sml  task55.sml  task56.sml  task57.sml  task88.sml  task89.sml  task90.sml
afp/: Monads.lhs
afp/defint/: defint.cabal
afp/defint/src/: Ast.hs  Main.hs
afp/defint/src/Interpreter/: CallByName.hs  CallByNameDefun.hs  CallByValue.hs  CallByValueDefun.hs  Simple.hs
afp/deptypes/: Makefile  idris-homework.md  idris-sem.md  preamble.tex
afp/phtypes/: Task1.hs  Task2.hs  Task3.hs  Task4.hs  Task5.hs
aisd/: tester
aisd/prac/: 2013_a.cpp  2013_b.cpp  2013_c.cpp  2013_d.cpp  2013_e.cpp  Makefile
aisd/themis/: aisdinvitation.cpp  aisdpotegowanie.cpp  bellman.cpp  binsrch.cpp  books.cpp  dijkstra.cpp  dra.cpp  editdist.cpp  inwersje.cpp  lcs2.cpp  lenlcs.cpp  macierze.cpp  pok.cpp  shortest.cpp  sto3.cpp  trian.cpp
anum/prac1/doc/: sprawozdanie.tex
anum/prac1/prog/: README.md  program.cpp
anum/prac2/: .sprawozdanie.tex.swp
anum/prac2/doc/: .sprawozdanie.tex.swp  sprawozdanie.tex
anum/prac2/prog/: README.md  program.cpp
anum/prac3/doc/: sprawozdanie.tex
anum/prac3/prog/: README.md  functions.hpp  integral.cpp  integral.hpp  program.cpp
ask/: l07t05.asm  l09t07.asm  l09t08.asm  l09t09.asm
compilers/lisp/: CMakeLists.txt
compilers/lisp/lib/lisp/: CMakeLists.txt
compilers/lisp/lib/lisp/include/lisp/: Interpreter.hpp  Lexer.hpp  List.hpp  Memory.hpp  Parser.hpp
compilers/lisp/lib/lisp/src/: Interpreter.cpp  Lexer.cpp  List.cpp  Memory.cpp  Parser.cpp
compilers/lisp/src/: REPL.cpp
coq/: assignment-01.v  assignment-02.v
coq/assignment-03/: MoreStlc.v  Norm.v  Smallstep.v  StlcProp.v
esys/: task11.c  task12.c  task13.c  task14.c  task15.c
esys/task02/: task02.ino
esys/task03/: task03.ino
esys/task04/: task04.ino
esys/task05/: task05.ino
esys/task06/: task06.ino
esys/task07/: task07.ino
esys/task09/: task09.ino
esys/task10/: task10.ino
esys/task17/: accel.cpp  accel.h  color.cpp  color.h  format.cpp  format.h  task17.ino
esys/task18/: task18.ino
esys/task19/: asset_scanner.h  pcm_player.h  task19.ino
esys/task24/: divmod.cpp  divmod.h  task24.ino
esys/task25/: Makefile  task25.c
imgproc/fftdemo/: CMakeLists.txt  report.md
imgproc/fftdemo/src/: app.c  app.h  img.c  img.h  screen.c  screen.h  trans.c  trans.h
imgproc/filters/: CMakeLists.txt  benchmark  preamble.tex  report.md  test
imgproc/filters/src/: filter.c  filter.h  main.c  task.c  task.h  utility.c  utility.h
imgproc/gimp/common/: texture.c  texture.h  utility.h  wrapper.c  wrapper.h
imgproc/gimp/distortion/: Makefile  main.c
imgproc/gimp/median/: Makefile  main.c  median.c  median.h
imgproc/graphcut/: CMakeLists.txt  README.md
imgproc/graphcut/src/: App.cpp  App.hpp  Graph.cpp  Graph.hpp  GraphCut.cpp  GraphCut.hpp  Histogram.cpp  Histogram.hpp  Image.hpp  Log.cpp  Log.hpp  Network.cpp  Network.hpp  Self.hpp  main.cpp
imgproc/graphcut/src/maxflow/: Boykov.cpp  Boykov.hpp  Boykov2.cpp  Boykov2.hpp  EdmondsKarp.cpp  EdmondsKarp.hpp
imgproc/histmatch/: CMakeLists.txt
imgproc/histmatch/src/: app.c  app.h  hist.c  hist.h  screen.c  screen.h
networks/client-udp/: utils.c
networks/traceroute/: utils.c
pgk/arkanoid/: CMakeLists.txt
pgk/arkanoid/lib/c11gl/include/gl/: ArrayBuffer.hpp
pgk/arkanoid/lib/c11gl/src/: Shader.cpp
pgk/arkanoid/shaders/: arkanoid.fs  arkanoid.vs
pgk/arkanoid/src/: Arkanoid.cpp  Ball.cpp  Ball.hpp  Paddle.cpp  Paddle.hpp  Renderer.cpp  Renderer.hpp  Wall.cpp  Wall.hpp  World.cpp  World.hpp
pgk/crowd/: CMakeLists.txt
pgk/crowd/lib/c11gl/: CMakeLists.txt
pgk/crowd/lib/c11gl/include/gl/: Program.hpp  Shader.hpp
pgk/crowd/lib/c11gl/src/: Program.cpp
pgk/crowd/shaders/: bone.vs
pgk/crowd/src/: Animation.cpp  Animation.hpp  Crowd.cpp  Crowd.hpp  Renderer.cpp  Renderer.hpp  Simulation.cpp  Skeleton.cpp  Skeleton.hpp
pgk/mastermind/: CMakeLists.txt
pgk/mastermind/src/: Board.cpp  Board.hpp  Mastermind.cpp  Renderer.cpp  Renderer.hpp
pgk/model/: CMakeLists.txt
pgk/model/lib/c11gl/src/: Program.cpp  Shader.cpp
pgk/model/shaders/: perlin.glsl  simple.fs  simple.vs
pgk/model/src/: Application.cpp  Application.hpp  Camera.cpp  Camera.hpp  Model.cpp  Model.hpp  Renderer.cpp  Renderer.hpp
pgk/terrain/: CMakeLists.txt
pgk/terrain/lib/c11gl/include/gl/: Program.hpp  Shader.hpp
pgk/terrain/maps/: N45E007.hgt  N49E015.hgt  N50E015.hgt
pgk/terrain/shaders/: flat.vs  globe.vs  grid.fs  grid.vs
pgk/terrain/src/: AbstractRenderer.cpp  AbstractRenderer.hpp  Application.cpp  Application.hpp  FlatRenderer.cpp  FlatRenderer.hpp  GlobeRenderer.cpp  GlobeRenderer.hpp  GridRenderer.cpp  GridRenderer.hpp  LOD.cpp  LOD.hpp  Offset.cpp  Offset.hpp  Sector.cpp  Sector.hpp  World.cpp  World.hpp
python/: l01t01_dice.py  l02t03_exceptions.py  l03t01_lists.py  l04t01_iterators.py  l04t04_iterators.py  l07t01_gtklogo.py  l08t03_gtkdatabase.py
python/l05t01_crawler/: crawler.py
python/l06t01_threads/: crawler.py  l06t01.py
python/l10t01_gtkwebserver/: client.py  server.py
python/project_japseu/: README.md  japseu.py  setup.py
python/project_japseu/japseu/: application.py  camera.py  components.py  ecs.py  entities.py  systems.py  tile.py  vector.py
python/project_japseu/maps/: base.tmx
ruby/auctions/: Gemfile  Rakefile  config.ru
ruby/auctions/config/: application.rb  (+2 more)
systems/arcade/: Makefile  README.md  arcade.c  arcade.h  game.c  game.h  player.c  player.h
systems/filesystem/: Makefile  README.md  sefs.c  sefs.h  test.c
systems/hshell/: README.md  hshell.cabal
systems/hshell/src/: HShell.hs
systems/hshell/src/HShell/: Cp.hs  Echo.hs  Grep.hs  Language.hs  Ls.hs  Mv.hs  Rm.hs  Wc.hs
unix/l02/: l02t01.sh  l02t02.sh  l02t03.sh
unix/l03/: l03t01.sh  l03t01.test  l03t02.awk  l03t02.test  l03t03.awk  l03t03.test  l03t04.awk  l03t04.test  l03t05-k.test  l03t05-p.test  l03t05.sh  test.awk
unix/l04/: l04-eis.sh
unix/l05/: Makefile  eis.c  eis.h  main.c  utils.c  utils.h
unix/l06/: Makefile  eis-batch.c  eis-client.c  eis-server.c  eis.c  eis.h  utils.c  utils.h
(+123 files in other folders)
