name:                defint
version:             0.1.0.0
author:              Åukasz Hanuszczak
maintainer:          lukasz.hanuszczak@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable defint
  main-is:             Main.hs
  build-depends:       base >=4.6 && <4.7
  hs-source-dirs:      src
  default-language:    Haskell2010
