name:                hshell
version:             0.1.0.0
synopsis:            shell script generator
-- description:         
-- homepage:            
-- license:             
-- license-file:        
author:              Åukasz Hanuszczak (mrhania)
-- maintainer:          
-- copyright:           
category:            System
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     HShell, HShell.Language,
                       HShell.Echo, HShell.Cp, HShell.Rm, HShell.Mv, HShell.Ls,
                       HShell.Wc, HShell.Grep    
  -- other-modules:       
  hs-source-dirs:      src
  build-depends:       base ==4.6.*
